--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Data Scientist</h3>
-          <p class="fst-italic">I'm Siva Prakash and I'm a motivated student pursuing bachelor of computer applications,
+          <p class="fst-italic">I'm Siva Prakash and I'm a motivated student pursuing master of computer applications,
             seeking opportunities where I can utilize my analytical, mathematical and technical skills to solve real
             life problems related to analyzing a big volume of datasets to draw insights that can help with business
             decisions.</p>
@@ -94,7 +94,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MCA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Tamil and English</span></li>
               </ul>
             </div>
@@ -191,7 +191,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Redis <i class="val">65%</i></span>
+            <span class="skill">Google Cloud <i class="val">65%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -320,14 +320,14 @@
           </div>
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
+            <h4>Master of Computer Applications</h4>
+            <h5>2022 - Present</h5>
+            <p><em>College of Engineering, Guindy</em></p>
+          </div>
+          <div class="resume-item">
             <h4>Bachelor of Computer Applications</h4>
             <h5>2019 - 2022</h5>
             <p><em>Apollo Arts and Science College, Chennai</em></p>
-          </div>
-          <div class="resume-item">
-            <h4>Higher Secondary</h4>
-            <h5>2017 - 2019</h5>
-            <p><em>Seventh Day Adventist Higher Secondary School, Chengalpattu</em></p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -420,8 +420,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-link"></i></div>
             <h4>Machine Learning</h4>
-            <p>Predictive Analysis using Machine Learning with Python's Scikit-Learn and Times series analysis using
-              statsmodels, fbprophet and pingouin python packages</p>
+            <p>Predictive Analysis using Machine Learning with Python's Scikit-Learn and Deep learning, Natural Language Processing, Computer Vision using Tensorflow Framework</p>
           </div>
         </div>
       </div>
