Added Image Enhancer app details

--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-link"></i></div>
             <h4>Machine Learning</h4>
-            <p>Predictive Analysis using Machine Learning with Python's Scikit-Learn and Deep learning, Natural Language Processing, Computer Vision using Tensorflow Framework</p>
+            <p>Predictive Analysis using Machine Learning with Python's Scikit-Learn and Deep learning, Natural Language
+              Processing, Computer Vision using Tensorflow Framework</p>
           </div>
         </div>
       </div>
@@ -457,6 +458,22 @@
                     class="bx bx-plus"></i></a>
                 <a href="templates/pricefy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/ImageEnhancer.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Translator</h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ImageEnhancer.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="templates/imageEnhancer.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
