Updated portfolio details

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">SQL <i class="val">85%</i></span>
+            <span class="skill">PostgreSQL <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -167,7 +167,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Javascript <i class="val">80%</i></span>
+            <span class="skill">C/C++ <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -467,7 +467,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/ImageEnhancer.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Translator</h4>
+              <h4>Image Enhancer</h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/ImageEnhancer.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
@@ -479,6 +479,37 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/scraper.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Github Scraper</h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/scraper.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="templates/scraper.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/spamFilter.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Spam Classifier</h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/spamFilter.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="templates/spamfilter.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
