Updated index.html & vendor files

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header">
     <div class="container">
       <h1><a href="index.html"></a>Siva Prakash</h1>
-      <h2>I'm an aspiring <span>Data Scientist</span> from Chennai</h2>
+      <h2>I'm an <span>Machine learning enthusiast</span> from Chennai</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -78,7 +78,7 @@
           <img src="assets/img/portfolio/me.jpg" class="img-fluid" alt="alternative image" width="100%" height="85%">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Data Scientist</h3>
+          <h3>Machine Learning Engineer</h3>
           <p class="fst-italic">I'm Siva Prakash and I'm a motivated student pursuing master of computer applications,
             seeking opportunities where I can utilize my analytical, mathematical and technical skills to solve real
             life problems related to analyzing a big volume of datasets to draw insights that can help with business
@@ -205,11 +205,8 @@
               </div>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </div><!-- End Skills -->
 
     <!-- ======= Testimonials ======= -->
@@ -544,13 +541,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/qrcode.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/rainfy.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>QR Code Generator</h4>
+              <h4>Rainfy</h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/qrcode.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                <a href="assets/img/portfolio/rainfy.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
                     class="bx bx-plus"></i></a>
-                <a href="templates/qrcode.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                <a href="templates/rainfy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
