Updated Portfolio & Resume Sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header">
     <div class="container">
       <h1><a href="index.html"></a>Siva Prakash</h1>
-      <h2>I'm an <span>Machine learning enthusiast</span> from Chennai</h2>
+      <h2>I'm an <span>Data Science Enthusiast</span> from Chennai</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -102,12 +102,11 @@
           <p>
             I am an enthusiastic and social person who loves to take up new challenges and learn new skills. I love
             meeting new people, exchanging ideas and spreading knowledge and positivity.
-            Few more things about me:<br>
+            Few more things about me:<br></p>
           <ul>
             <li><i class="bi bi-chevron-right"></i> I am a very fast learner and proving as a person.</li>
             <li><i class="bi bi-chevron-right"></i> I am a highly enthusiastic and self-motivating programmer.</li>
           </ul>
-          </p>
         </div>
       </div>
     </div><!-- End About Me -->
@@ -124,7 +123,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Data Analytics <i class="val">90%</i></span>
+            <span class="skill">Data Science <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -191,7 +190,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Google Cloud <i class="val">65%</i></span>
+            <span class="skill">C# <i class="val">65%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -199,7 +198,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">PowerBI <i class="val">60%</i></span>
+            <span class="skill">Google Cloud <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -307,13 +306,11 @@
             <h4>Siva Prakash</h4>
             <p><em>Innovative Student with 1+ years of learning experience in analyzing and reporting data using
                 various statistical tools</em></p>
-            <p>
             <ul>
               <li>Chennai, Tamilnadu, India</li>
               <li>(+91) 9786711485</li>
               <li>prakashanalyst@outlook.com</li>
             </ul>
-            </p>
           </div>
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
@@ -326,14 +323,52 @@
             <h5>2019 - 2022</h5>
             <p><em>Apollo Arts and Science College, Chennai</em></p>
           </div>
+          <div class="resume-item">
+            <h4>Higher Secondary</h4>
+            <h5>2017 - 2019</h5>
+            <p><em>Seventh Day Adventist Hr Sec School, Chengalpet</em></p>
+          </div>
+          <h3 class="resume-title">Certifications</h3>
+          <div class="resume-item">
+            <p>Stanford University Machine Learning Specialization - Coursera</p>
+          </div>
+          <div class="resume-item">
+            <p>Google Cloud Machine Learning Specialization - Coursera</p>
+          </div>
+          <div class="resume-item">
+            <p>Python Intermediate Certification - Hackerrank</p>
+          </div>
+          <div class="resume-item">
+            <p>SQL Intermediate Certification - Hackerrank</p>
+          </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
+            <h4>Data Science Tutor (Online)</h4>
+            <h5>Sep 2022 - Jan 2023</h5>
+            <p><em>Careergrowth360, India</em></p>
+            <ul>
+              <li>Provided personalized tutoring to students from diverse
+                academic backgrounds and multiple colleges in Tamil, enhancing their understanding of data science and machine
+                learning concepts.</li>
+              <li>Designed comprehensive learning materials tailored to the
+                individual needs of students, ensuring effective
+                comprehension of complex topics.
+              </li>
+              <li>Organized interactive group discussions and collaborative
+                problem-solving sessions among students, creating a dynamic
+                learning environment. </li>
+              <li>Stayed updated with the latest trends in data science and
+                machine learning to provide cutting-edge insights and
+                guidance to students. 
+              </li>
+              </ul>
+          </div>
+          <div class="resume-item">
             <h4>Data Science Trainee</h4>
             <h5>May 2021 - Aug 2021</h5>
             <p><em>Goeduhub Technologies, India</em></p>
-            <p>
             <ul>
               <li>Collecting, Cleaning and Analyzing data using python’s
                 packages such as numpy, pandas, matplotlib, seaborn,
@@ -347,11 +382,9 @@
               </li>
               <li>Deploying trained machine learning models using flask web framework and heroku cloud platform.</li>
             </ul>
-            </p>
           </div>
         </div>
       </div>
-
     </div>
   </section><!-- End Resume Section -->
 
@@ -398,8 +431,8 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4>Problem Solving</h4>
-            <p>Using generic or ad hoc methods in an orderly manner to find solutions to problems.</p>
+            <h4>API development</h4>
+            <p>To create seamless connections between different software applications, enabling efficient data exchange and improved functionality.</p>
           </div>
         </div>
 
@@ -585,8 +618,38 @@
           </div>
         </div>
 
-      </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/blazor.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Blazor QRCode</h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/blazor.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="templates/blazor.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/todo.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Todo Application</h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/todo.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="templates/todo.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section><!-- End Portfolio Section -->
 
