Removed blazor application page

--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
             <p><em>Careergrowth360, India</em></p>
             <ul>
               <li>Provided personalized tutoring to students from diverse
-                academic backgrounds and multiple colleges in Tamil, enhancing their understanding of data science and machine
+                academic backgrounds and multiple colleges in Tamil, enhancing their understanding of data science and
+                machine
                 learning concepts.</li>
               <li>Designed comprehensive learning materials tailored to the
                 individual needs of students, ensuring effective
@@ -361,9 +362,9 @@
                 learning environment. </li>
               <li>Stayed updated with the latest trends in data science and
                 machine learning to provide cutting-edge insights and
-                guidance to students. 
+                guidance to students.
               </li>
-              </ul>
+            </ul>
           </div>
           <div class="resume-item">
             <h4>Data Science Trainee</h4>
@@ -432,7 +433,8 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4>API development</h4>
-            <p>To create seamless connections between different software applications, enabling efficient data exchange and improved functionality.</p>
+            <p>To create seamless connections between different software applications, enabling efficient data exchange
+              and improved functionality.</p>
           </div>
         </div>
 
@@ -515,11 +517,10 @@
             <div class="portfolio-info">
               <h4>Github Scraper</h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/scraper.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                <a href="templates/scraper.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/scraper.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                    class="bx bx-plus"></i></a>
+                <a href="templates/scraper.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -620,31 +621,14 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/blazor.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Blazor QRCode</h4>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/blazor.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                <a href="templates/blazor.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/todo.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Todo Application</h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/todo.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                <a href="templates/todo.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/todo.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                    class="bx bx-plus"></i></a>
+                <a href="templates/todo.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
