Updated home section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header">
     <div class="container">
       <h1><a href="index.html"></a>Siva Prakash</h1>
-      <h2>I'm an <span>Data Science Enthusiast</span> from Chennai</h2>
+      <h2>I'm an <span>Software Enginner</span> from Chennai</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
