--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
           <img src="assets/img/portfolio/me.jpg" class="img-fluid" alt="alternative image" width="100%" height="85%">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Machine Learning Engineer</h3>
-          <p class="fst-italic">I'm Siva Prakash and I'm a motivated student pursuing master of computer applications,
-            seeking opportunities where I can utilize my analytical, mathematical and technical skills to solve real
-            life problems related to analyzing a big volume of datasets to draw insights that can help with business
-            decisions.</p>
+          <h3>Software Engineer</h3>
+          <p>
+            I am Siva Prakash, a motivated professional with a Master of Computer Applications. I specialize in
+            developing both frontend and backend applications, as well as creating data-driven solutions. With 6 months
+            of experience in the IT industry and over 2 years of tutoring experience, I am eager to leverage my skills
+            and expertise to contribute effectively in a dynamic work environment.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -93,7 +94,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MCA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Tamil and English</span></li>
               </ul>
@@ -123,7 +124,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Data Science <i class="val">90%</i></span>
+            <span class="skill">Python <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -131,7 +132,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Python <i class="val">90%</i></span>
+            <span class="skill">Typescript <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -155,7 +156,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Machine Learning <i class="val">80%</i></span>
+            <span class="skill">C++<i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -166,7 +167,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">C/C++ <i class="val">80%</i></span>
+            <span class="skill">Google Cloud<i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -190,7 +191,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C# <i class="val">65%</i></span>
+            <span class="skill">Spark<i class="val">65%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -198,7 +199,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Google Cloud <i class="val">60%</i></span>
+            <span class="skill">Kafka <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
               </div>
