Updated resume section

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Siva Prakash</h4>
-            <p><em>Innovative Student with 1+ years of learning experience in analyzing and reporting data using
-                various statistical tools</em></p>
+            <p><em>Software Engineer with 6 months of experience in the IT industry and over 2 years of tutoring
+                experience</em></p>
             <ul>
               <li>Chennai, Tamilnadu, India</li>
               <li>(+91) 9786711485</li>
@@ -315,8 +315,13 @@
           </div>
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
+            <h4>Master of Business Administration</h4>
+            <h5>2024 - present</h5>
+            <p><em>University of Madras</em></p>
+          </div>
+          <div class="resume-item">
             <h4>Master of Computer Applications</h4>
-            <h5>2022 - Present</h5>
+            <h5>2022 - 2024</h5>
             <p><em>College of Engineering, Guindy</em></p>
           </div>
           <div class="resume-item">
@@ -346,43 +351,71 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Data Science Tutor (Online)</h4>
-            <h5>Sep 2022 - Jan 2023</h5>
-            <p><em>Careergrowth360, India</em></p>
+            <h4>Software Engineer</h4>
+            <h5>June 2024 - present</h5>
+            <h5>Full Time</h5>
+            <h5>In Person</h5>
+            <p><em>Atsuya Technologies, Chennai</em></p>
             <ul>
-              <li>Provided personalized tutoring to students from diverse
-                academic backgrounds and multiple colleges in Tamil, enhancing their understanding of data science and
-                machine
-                learning concepts.</li>
-              <li>Designed comprehensive learning materials tailored to the
-                individual needs of students, ensuring effective
-                comprehension of complex topics.
+              <li>Developing robust data pipelines and analytics solutions using relevant programming languages and
+                frameworks, such as Python for scripting and data analysis, and C++ for application development.</li>
+              <li>Deploying and maintaining machine learning models using web frameworks like Flask for RESTful APIs and
+                cloud platforms like Heroku for scalable applications.</li>
+              <li>Integrating with various databases such as PostgreSQL and TimescaleDB for efficient data storage and
+                retrieval, and leveraging messaging systems like Apache Kafka for real-time data processing.</li>
+              <li>Contributing to microservices architecture using technologies like GraphQL and gRPC for efficient
+                communication and scalable service development.</li>
+            </ul>
+          </div>
+          <div class="resume-item">
+            <h4>Backend Trainer</h4>
+            <h5>Apr 2024 - May 2024</h5>
+            <h5>Full Time</h5>
+            <h5>In Person</h5>
+            <p><em>Pumo Techinovation, Chennai</em></p>
+            <ul>
+              <li>Provided personalized tutoring to students from diverse academic backgrounds and multiple colleges,
+                enhancing their understanding of Java programming with Spring Boot, JDBC, Hibernate, PostgreSQL, and
+                Swagger for backend development.</li>
+              <li>Organized interactive group discussions and collaborative problem-solving sessions among students,
+                fostering an engaging learning environment focused on practical application in backend development.</li>
+              <li>Stayed updated with the latest trends in Java, Spring Boot, JDBC, Hibernate, and Swagger development
+                to deliver cutting-edge insights and guidance to students, preparing them for real-world applications in
+                web development.</li>
+            </ul>
+          </div>
+          <div class="resume-item">
+            <h4>Backend Trainer</h4>
+            <h5>Feb 2023 - Apr 2023</h5>
+            <h5>Full Time</h5>
+            <h5>In Person</h5>
+            <p><em>FiiT, Chennai</em></p>
+            <ul>
+              <li>Provided personalized tutoring to students from diverse academic backgrounds and multiple colleges,
+                enhancing their understanding of Python programming with Django and FastAPI for backend development.
               </li>
-              <li>Organized interactive group discussions and collaborative
-                problem-solving sessions among students, creating a dynamic
-                learning environment. </li>
-              <li>Stayed updated with the latest trends in data science and
-                machine learning to provide cutting-edge insights and
-                guidance to students.
+              <li>Organized interactive group discussions and collaborative problem-solving sessions among students,
+                fostering an engaging learning environment focused on practical application in backend development.</li>
+              <li>Stayed updated with the latest trends in Python, Django, and FastAPI development to deliver
+                cutting-edge insights and guidance to students, preparing them for real-world applications in web
+                development.
               </li>
             </ul>
           </div>
           <div class="resume-item">
-            <h4>Data Science Trainee</h4>
-            <h5>May 2021 - Aug 2021</h5>
-            <p><em>Goeduhub Technologies, India</em></p>
+            <h4>Python Trainer</h4>
+            <h5>Sep 2022 - Jan 2023</h5>
+            <h5>Part Time</h5>
+            <h5>Online</h5>
+            <p><em>Careergrowth360, Coimbatore</em></p>
             <ul>
-              <li>Collecting, Cleaning and Analyzing data using python’s
-                packages such as numpy, pandas, matplotlib, seaborn,
-                plotly and holoviews.</li>
-              <li>Resampling imbalanced datasets with various over and under sampling methods using python's
-                imbalanced-learn package.
-              </li>
-              <li>Implementing various regression, classification and clustering algorithms on different datasets using
-                python's scikit-learn package.</li>
-              <li>Building content based recommender system using cosine similarity method using scikit-learn package.
-              </li>
-              <li>Deploying trained machine learning models using flask web framework and heroku cloud platform.</li>
+              <li>Provided personalized tutoring to students from diverse academic backgrounds and multiple colleges,
+                enhancing their understanding of Python programming with machine learning and FastAPI.</li>
+              <li>Organized interactive group discussions and collaborative problem-solving sessions among students,
+                creating a dynamic learning environment focused on practical application in Python development and
+                machine learning.</li>
+              <li>Stayed updated with the latest trends in Python, machine learning, and FastAPI development to provide
+                cutting-edge insights and guidance to students.</li>
             </ul>
           </div>
         </div>
