Updated resume section

--- a/index.html
+++ b/index.html
@@ -357,10 +357,9 @@
             <h5>In Person</h5>
             <p><em>Atsuya Technologies, Chennai</em></p>
             <ul>
-              <li>Developing robust data pipelines and analytics solutions using relevant programming languages and
-                frameworks, such as Python for scripting and data analysis, and C++ for application development.</li>
-              <li>Deploying and maintaining machine learning models using web frameworks like Flask for RESTful APIs and
-                cloud platforms like Heroku for scalable applications.</li>
+              <li>Developing robust APIs and solutions using relevant programming languages and
+                frameworks, such as Python for scripting, Java for API development and C++ for application development.
+              </li>
               <li>Integrating with various databases such as PostgreSQL and TimescaleDB for efficient data storage and
                 retrieval, and leveraging messaging systems like Apache Kafka for real-time data processing.</li>
               <li>Contributing to microservices architecture using technologies like GraphQL and gRPC for efficient
