--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email Me</h3>
-              <p>prakashanalyst@outlook.com</p>
+              <p>prakashanalyst@protonmail.com</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 d-flex align-items-stretch">
@@ -1073,16 +1073,57 @@
           </div>
         </div>
 
-        <div class="my-3"></div>
-        <div class="text-center">
-          <button
-            class="submit-button"
-            onclick="window.open('https://formsubmit.co/el/kijise')"
-            type="submit"
-          >
-            Send Message
-          </button>
-        </div>
+        <form
+          action="https://getform.io/f/nbdoorna"
+          method="post"
+          role="form"
+          class="php-email-form mt-4"
+        >
+          <div class="row">
+            <div class="col-md-6 form-group">
+              <input
+                type="text"
+                name="name"
+                class="form-control"
+                id="name"
+                placeholder="Your Name"
+                required
+              />
+            </div>
+            <div class="col-md-6 form-group mt-3 mt-md-0">
+              <input
+                type="email"
+                class="form-control"
+                name="email"
+                id="email"
+                placeholder="Your Email"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <input
+              type="text"
+              class="form-control"
+              name="subject"
+              id="subject"
+              placeholder="Subject"
+              required
+            />
+          </div>
+          <div class="form-group mt-3">
+            <textarea
+              class="form-control"
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="mt-3">Send Message</button>
+          </div>
+        </form>
       </div>
     </section>
     <!-- End Contact Section -->
