Corrected Typos & Added Content

--- a/index.html
+++ b/index.html
@@ -451,13 +451,14 @@
               <ul>
                 <li>Chennai, Tamilnadu, India</li>
                 <li>(+91) 9786711485</li>
-                <li>prakashanalyst@outlook.com</li>
+                <li>prakashanalyst@protonmail.com</li>
               </ul>
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Business Administration</h4>
               <h5>2024 - present</h5>
+              <h5>Distance</h5>
               <p><em>University of Madras</em></p>
             </div>
             <div class="resume-item">
@@ -489,6 +490,25 @@
             </div>
             <div class="resume-item">
               <p>SQL Intermediate Certification - Hackerrank</p>
+            </div>
+            <h3 class="resume-title">Achievements</h3>
+            <div class="resume-item">
+              <p>30 Days of Pandas Badge - Leetcode</p>
+            </div>
+            <div class="resume-item">
+              <p>Leetcode 75 - Leetcode</p>
+            </div>
+            <div class="resume-item">
+              <p>100 Days of Code - Leetcode</p>
+            </div>
+            <div class="resume-item">
+              <p>DSA I & II Badges - Leetcode</p>
+            </div>
+            <div class="resume-item">
+              <p>Programming I & II Badges - Leetcode</p>
+            </div>
+            <div class="resume-item">
+              <p>SQL I & II Badges - Leetcode</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -988,7 +1008,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>Chennai, TamilNadu, India</p>
+              <p>Chennai, Tamilnadu, India</p>
             </div>
           </div>
 
